syntax = "proto3";

package product;

import "common/Paging.proto";
import "common/PagingCondition.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.product";

service SearchProducts {
  rpc handle (SearchProductsRequest) returns (SearchProductsResponse);
}

message SearchProductsRequest {
  string likeProductName = 1;
  common.PagingCondition pagingCondition = 2;
  string sortCondition = 3;
}

message SearchProductsResponse {
  repeated Summary items = 1;
  common.Paging paging = 2;
}

message Summary {
  string id = 1;
  string name = 2;
  optional string imageUrl = 3;
  int32 price = 4;
  int32 quantity = 5;
}