syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.common";

message PagingCondition {
  int32 pageSize = 1;
  int32 pageNumber = 2;
}